<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_head"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="150dp"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="@id/cv_head"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/halo_danish_maula"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_ask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/poppins_light"
                    android:text="@string/masak_apa_hari_ini"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>


            <ImageButton
                android:id="@+id/circle_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="20dp"
                android:background="@color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="-20dp"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_head">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/sv_search"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="48dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:inputType="text"
                app:defaultQueryHint="Cari Makanan"
                app:iconifiedByDefault="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:queryBackground="@android:color/transparent" />

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/rv_head"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/pict"
            android:translationZ="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_search" />

        <TextView
            android:id="@+id/tv_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/rekomendasi"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_head" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="20dp"
            android:translationZ="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_recommend"
            tools:listitem="@layout/row_recipe" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>